--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
   "buildCommand": "cd client && npm install && npm run build",
-  "outputDirectory": "dist/public",
+  "outputDirectory": "client/dist",
   "devCommand": "cd client && npm run dev",
-  "routes": [
+  "cleanUrls": true,
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
